<resources>
    <string name="app_name">Embuni</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="news_and_notices">news_and_notices</string>
    <string name="e_learning">e_learning</string>
    <string name="social">social</string>
    <string name="banking">banking</string>
    <string name="feedback">feedback</string>
    <string name="about">about</string>
</resources>
