<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"

android:layout_height="match_parent"
android:layout_marginTop="50dp"
android:layout_marginLeft="20dp"
android:layout_marginRight="20dp"
tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="#6f6f6f"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"

            >

            <LinearLayout
                android:orientation="vertical"
                android:padding="5dp"
                android:id="@+id/examtimetableid"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/table"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <TextView
                    android:textSize="18sp"
                    android:layout_marginTop="12dp"
                    android:textColor="#000"
                    android:text="Exam Time Table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"

            >

            <LinearLayout
                android:orientation="vertical"
                android:padding="5dp"
                android:gravity="center"
                android:id="@+id/teachingtimetableid"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/table"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <TextView
                    android:textSize="18sp"
                    android:layout_marginTop="12dp"
                    android:textColor="#000"
                    android:text="Teaching Timetable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"

            >

            <LinearLayout
                android:orientation="vertical"
                android:padding="5dp"
                android:id="@+id/newsid"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/news"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <TextView
                    android:textSize="18sp"
                    android:layout_marginTop="12dp"
                    android:textColor="#000"
                    android:text="@string/news_and_notices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"

            >

            <LinearLayout
                android:orientation="vertical"
                android:padding="5dp"
                android:id="@+id/eventsid"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/events"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <TextView
                    android:textSize="18sp"
                    android:layout_marginTop="12dp"
                    android:textColor="#000"
                    android:text="Events"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"

            >

            <LinearLayout
                android:orientation="vertical"
                android:padding="5dp"
                android:gravity="center"
                android:id="@+id/portalid"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/portal"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <TextView
                    android:textSize="18sp"
                    android:layout_marginTop="12dp"
                    android:textColor="#000"
                    android:text="Portal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"

            >

            <LinearLayout
                android:orientation="vertical"
                android:padding="5dp"
                android:gravity="center"
                android:id="@+id/elearningid"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/knot"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <TextView
                    android:textSize="18sp"
                    android:layout_marginTop="12dp"
                    android:textColor="#000"
                    android:text="@string/e_learning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"

            >

            <LinearLayout
                android:orientation="vertical"
                android:padding="5dp"
                android:gravity="center"
                android:id="@+id/socialid"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/social"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <TextView
                    android:textSize="18sp"
                    android:layout_marginTop="12dp"
                    android:textColor="#000"
                    android:text="@string/social"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"

            >

            <LinearLayout
                android:orientation="vertical"
                android:padding="5dp"
                android:gravity="center"
                android:id="@+id/bankingid"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/bank"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <TextView
                    android:textSize="18sp"
                    android:layout_marginTop="12dp"
                    android:textColor="#000"
                    android:text="@string/banking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"

            >

            <LinearLayout
                android:orientation="vertical"
                android:padding="5dp"
                android:id="@+id/contactid"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/events"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <TextView
                    android:textSize="18sp"
                    android:layout_marginTop="12dp"
                    android:textColor="#000"
                    android:text="Contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"

            >

            <LinearLayout
                android:orientation="vertical"
                android:padding="5dp"
                android:id="@+id/feedbackid"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/feed"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <TextView
                    android:textSize="18sp"
                    android:layout_marginTop="12dp"
                    android:textColor="#000"
                    android:text="@string/feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="6dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp"

            >

            <LinearLayout
                android:orientation="vertical"
                android:padding="5dp"
                android:gravity="center"
                android:id="@+id/aboutid"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/knot"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
                <TextView
                    android:textSize="18sp"
                    android:layout_marginTop="12dp"
                    android:textColor="#000"
                    android:text="@string/about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </GridLayout>

</LinearLayout>

</ScrollView>
